--- a/package.json
+++ b/package.json
@@ -33,7 +33,16 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.9",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@types/node": "^14.6.1",
+    "@types/react": "^16.9.48",
+    "@types/react-dom": "^16.9.8",
+    "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-typescript": "^2.4.18",
+    "prettier": "2.1.1",
+    "typescript": "^4.0.2"
   },
   "license": "0BSD",
   "main": "n/a",
@@ -42,8 +51,10 @@
     "url": "git+https://gitlab.com/techblog1/gatsby-blog"
   },
   "scripts": {
-    "build": "gatsby build",
     "dev": "gatsby develop",
+    "dev:codegen": "IS_CODEGEN=true gatsby develop",
+    "codegen": "graphql-codegen",
+    "build": "gatsby build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "clean": "gatsby clean"
