--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.17.8",
-    "@graphql-codegen/typescript": "^1.17.9",
-    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/cli": "1.17.8",
+    "@graphql-codegen/typescript": "1.17.8",
+    "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "1.17.8",
     "@types/node": "^14.6.1",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-typescript": "^2.4.18",
     "prettier": "2.1.1",
@@ -53,7 +55,7 @@
   "scripts": {
     "dev": "gatsby develop",
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
-    "codegen": "graphql-codegen",
+    "codegen": "graphql-codegen --config codegen.yml",
     "build": "gatsby build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
