--- a/package.json
+++ b/package.json
@@ -36,14 +36,20 @@
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
     "@graphql-codegen/typescript-operations": "1.17.8",
-    "@graphql-codegen/typescript-react-apollo": "1.17.8",
     "@types/node": "^14.6.1",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
+    "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-typescript": "^2.4.18",
+    "modern-css-reset": "^1.1.1",
+    "postcss": "^7.0.32",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "prettier": "2.1.1",
+    "sass": "^1.26.10",
     "typescript": "^4.0.2"
   },
   "license": "0BSD",
