--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
     "@graphql-codegen/typescript-operations": "1.17.8",
@@ -43,6 +44,7 @@
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-prettier-eslint": "^1.0.4",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-typescript": "^2.4.18",
     "modern-css-reset": "^1.1.1",
@@ -50,6 +52,12 @@
     "postcss-flexbugs-fixes": "^4.2.1",
     "prettier": "2.1.1",
     "sass": "^1.26.10",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-standard-scss": "^1.1.0",
+    "stylelint-prettier": "^1.1.2",
+    "stylelint-scss": "^3.18.0",
     "typescript": "^4.0.2"
   },
   "license": "0BSD",
