--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kaito Kimura <mail.kaito03@gmail.com>",
   "dependencies": {
+    "fuse.js": "^6.4.1",
     "gatsby": "^2.24.51",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-feed": "^2.5.11",
