--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "private": true,
   "description": "My tech blog produced by gatsby",
   "version": "0.1.0",
-  "author": "Kaito Kimura <mail.kaito03@gmail.com>",
+  "author": "Kaito Kimura <dev.kimuson@gmail.com>",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
@@ -47,17 +52,22 @@
     "@types/react-helmet": "^6.1.0",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-prettier-eslint": "^1.0.4",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-remark-autolink-headers": "^2.3.11",
     "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-transformer-typescript-css-modules": "^1.0.14",
+    "husky": "^4.3.0",
     "modern-css-reset": "^1.1.1",
     "postcss": "^7.0.32",
     "postcss-flexbugs-fixes": "^4.2.1",
-    "prettier": "2.1.1",
+    "prettier": "^2.1.1",
     "sass": "^1.26.10",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
@@ -65,6 +75,7 @@
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.0",
     "typescript": "^4.0.2"
   },
   "license": "0BSD",
@@ -77,6 +88,7 @@
     "dev": "gatsby develop",
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
     "codegen": "graphql-codegen --config codegen.yml",
+    "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && stylelint src --fix",
     "build": "gatsby build",
     "try:prod": "yarn build && npx http-server public",
     "start": "npm run develop",
