--- a/package.json
+++ b/package.json
@@ -36,10 +36,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "rehype-react": "^6.1.0"
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
@@ -59,7 +56,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
-    "gatsby-remark-autolink-headers": "^2.3.11",
+    "gatsby-remark-autolink-headers": "^2.3.13",
     "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
