--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.25",
     "gatsby-plugin-offline": "^3.2.25",
-    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.29",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-images": "^3.3.27",
@@ -48,12 +47,17 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "autoprefixer": "^9.8.6",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-next-seo": "^1.6.1",
+    "gatsby-plugin-remove-console": "^0.0.2",
+    "gatsby-plugin-robots-txt": "^1.5.2",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-remark-autolink-headers": "^2.3.13",
@@ -65,6 +69,7 @@
     "postcss": "^7.0.32",
     "postcss-flexbugs-fixes": "^4.2.1",
     "prettier": "^2.1.1",
+    "react-helmet-async": "^1.0.7",
     "sass": "^1.26.10",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
