--- a/package.json
+++ b/package.json
@@ -14,31 +14,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "fuse.js": "^6.4.1",
-    "gatsby": "^2.24.51",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-feed": "^2.5.11",
-    "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-manifest": "^2.4.25",
-    "gatsby-plugin-offline": "^3.2.25",
-    "gatsby-plugin-sharp": "^2.6.29",
-    "gatsby-remark-copy-linked-files": "^2.3.12",
-    "gatsby-remark-images": "^3.3.27",
-    "gatsby-remark-prismjs": "^3.5.11",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.26",
-    "gatsby-transformer-remark": "^2.8.31",
-    "gatsby-transformer-sharp": "^2.5.13",
-    "prismjs": "^1.21.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
-    "react-typography": "^0.16.19",
-    "rehype-react": "^6.1.0"
-  },
-  "devDependencies": {
-    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
     "@graphql-codegen/typescript-operations": "1.17.8",
@@ -46,39 +21,63 @@
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^9.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "gatsby-plugin-eslint": "^2.0.8",
+    "fuse.js": "^6.4.1",
+    "gatsby": "^2.24.51",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-feed": "^2.5.11",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-manifest": "^2.4.25",
     "gatsby-plugin-next-seo": "^1.6.1",
+    "gatsby-plugin-offline": "^3.2.25",
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.5.2",
-    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sass": "^2.3.13",
+    "gatsby-plugin-sharp": "^2.6.29",
     "gatsby-plugin-sitemap": "^2.4.13",
-    "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-remark-autolink-headers": "^2.3.13",
     "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-copy-linked-files": "^2.3.12",
+    "gatsby-remark-images": "^3.3.27",
+    "gatsby-remark-prismjs": "^3.5.11",
+    "gatsby-remark-smartypants": "^2.3.10",
+    "gatsby-source-filesystem": "^2.3.26",
+    "gatsby-transformer-remark": "^2.8.31",
+    "gatsby-transformer-sharp": "^2.5.13",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
-    "husky": "^4.3.0",
     "modern-css-reset": "^1.1.1",
-    "postcss": "^7.0.32",
+    "postcss": "^7.0.34",
     "postcss-flexbugs-fixes": "^4.2.1",
-    "prettier": "^2.1.1",
+    "prismjs": "^1.21.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
-    "sass": "^1.26.10",
+    "rehype-react": "^6.1.0",
+    "sass": "^1.26.11",
+    "typescript": "^4.0.2"
+  },
+  "devDependencies": {
+    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-stylelint": "^3.2.0",
+    "husky": "^4.3.0",
+    "prettier": "^2.1.1",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
-    "stylelint-webpack-plugin": "^2.1.0",
-    "typescript": "^4.0.2"
+    "stylelint-webpack-plugin": "^2.1.0"
   },
   "license": "0BSD",
   "main": "n/a",
