[refactor] コンポーネントのディレクトリ構成を更新
atomic design に従う

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       ],
       "@styles/*": [
         "src/global-styles/*"
+      ],
+      "@funcs/*": [
+        "./src/helper-functions/*"
       ]
     },
     "module": "esnext",
