--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
-    "stylelint-webpack-plugin": "^2.1.0"
+    "stylelint-webpack-plugin": "^2.1.0",
+    "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
   "license": "0BSD",
   "main": "n/a",
