--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^9.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
+    "dayjs": "^1.9.1",
     "fuse.js": "^6.4.1",
     "gatsby": "^2.24.51",
     "gatsby-image": "^2.4.16",
