--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-share": "^3.0.3",
     "autoprefixer": "^9.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
@@ -60,6 +61,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
+    "react-share": "^4.3.0",
     "rehype-react": "^6.1.0",
     "sass": "^1.26.11",
     "typescript": "^4.0.2"
