--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-share": "^3.0.3",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^9.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
@@ -71,6 +72,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-stylelint": "^3.2.0",
     "husky": "^4.3.0",
     "prettier": "^2.1.1",
