--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
+  "files.associations": {
+    "*.tsx": "typescriptreact",
+    "*.jsx": "javascriptreact",
+  },
   // ESLint
-  "eslint.enable": true,
   "eslint.options": {
     "configFile": "./.eslintrc.js"
   },
