--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "react-share": "^4.3.0",
     "rehype-react": "^6.1.0",
     "sass": "^1.26.11",
+    "swiper": "^6.3.3",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
+    "@types/swiper": "^5.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby-plugin-eslint": "^2.0.8",
