[update] pre-push hookにビルドを追加
リモートでビルドが落ちることが何度かあったので, 投げる前に実際にビルドしてみる

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Kaito Kimura <dev.kimuson@gmail.com>",
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint"
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn build"
     }
   },
   "dependencies": {
