--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-stylelint": "^3.2.0",
     "husky": "^4.3.0",
