[auto] post article

--- a/package.json
+++ b/package.json
@@ -108,6 +108,6 @@
     "start": "npm run develop",
     "clean": "gatsby clean",
     "article:new": "git rev-parse --show-toplevel && ./bin/create.sh",
-    "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article && git push origin HEAD'"
+    "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin HEAD"
   }
 }
