--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
+    "@types/rehype-react": "^4.0.0",
     "@types/swiper": "^5.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -79,6 +80,7 @@
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-stylelint": "^3.2.0",
+    "gatsby-remark-component": "^1.1.3",
     "husky": "^4.3.0",
     "prettier": "^2.1.1",
     "stylelint": "^13.6.1",
