[fix] stylelintがjsに働いてエラーを吐いてたので、*.css, *.scssに限定して解消

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,10 @@
   "eslint.alwaysShowStatus": true,
   // Stylelint
   "stylelint.enable": true,
+  "stylelint.validate": [
+    "css",
+    "scss",
+  ],
   // Lint On Save
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
