--- a/codegen.yml
+++ b/codegen.yml
@@ -3,6 +3,7 @@ schema: "http://localhost:8000/__graphql"
 documents:
   - "./node_modules/gatsby-*/**/*.js"
   - "./src/**/*.{ts,tsx}"
+  - "./gatsby-node.ts"
 generates:
   types/graphql-types.d.ts:
     plugins:
