--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
     "esModuleInterop": true,
     "jsx": "preserve",
@@ -33,12 +34,13 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
   },
   "exclude": [
     "node_modules"
   ],
   "include": [
+    "./gatsby-node.ts",
+    "./gatsby-browser.ts",
     "./src/**/*",
     "./gatsby/**/*"
   ]
