[update] 型宣言ファイルの置き場を作成した
今回作成した@typesが自動で読まれるので、ライブラリやグローバル型の拡張に使う

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "dom",
       "esnext"
     ],
+    "rootDir": "./",
     "baseUrl": "./",
     "paths": {
       "@declaration": [
@@ -35,6 +36,10 @@
     "strict": true,
     "resolveJsonModule": true,
   },
+  "files": [
+    "./@types/globals.d.ts",
+    "./@types/vendor.d.ts",
+  ],
   "exclude": [
     "node_modules"
   ],
