--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@graphql-codegen/cli": "1.17.8",
-    "@graphql-codegen/typescript": "1.17.8",
-    "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/cli": "^1.19.1",
+    "@graphql-codegen/typescript": "^1.17.11",
+    "@graphql-codegen/typescript-operations": "^1.17.9",
     "@types/node": "^14.6.1",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
@@ -31,7 +31,6 @@
     "fuse.js": "^6.4.1",
     "gatsby": "^2.24.51",
     "gatsby-image": "^2.4.16",
-    "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
@@ -52,7 +51,6 @@
     "gatsby-remark-prismjs": "^3.5.11",
     "gatsby-remark-smartypants": "^2.3.10",
     "gatsby-source-filesystem": "^2.3.26",
-    "gatsby-transformer-remark": "^2.8.31",
     "gatsby-transformer-sharp": "^2.5.13",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "modern-css-reset": "^1.1.1",
@@ -71,18 +69,25 @@
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
     "@tsconfig/node14": "^1.0.0",
+    "@types/mdx-js__react": "^1.5.3",
     "@types/rehype-react": "^4.0.0",
     "@types/swiper": "^5.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-google-adsense": "^1.1.3",
+    "gatsby-plugin-mdx": "^1.4.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-remark-component": "^1.1.3",
     "husky": "^4.3.0",
+    "mdx-utils": "^0.2.0",
     "prettier": "^2.1.1",
+    "react-live": "^2.2.3",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^3.0.0",
