[refactor] src/components にエイリアスを貼って、エイリアスからインポートするようにした

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
       ],
       "@funcs/*": [
         "./src/helper-functions/*"
-      ]
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
     },
     "module": "esnext",
     "moduleResolution": "node",
