--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-remark-component": "^1.1.3",
+    "http-server": "^0.12.3",
     "husky": "^4.3.0",
     "mdx-utils": "^0.2.0",
     "prettier": "^2.1.1",
@@ -113,7 +114,7 @@
     "codegen": "graphql-codegen --config codegen.yml",
     "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && yarn run stylelint 'src/**/*.{scss,.css}' --fix",
     "build": "gatsby build",
-    "try:prod": "yarn build && npx http-server public",
+    "try:prod": "yarn build && http-server public",
     "start": "npm run develop",
     "clean": "gatsby clean",
     "article:new": "git rev-parse --show-toplevel && ./bin/create.sh",
