--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kaito Kimura <dev.kimuson@gmail.com>",
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
+      "pre-commit": "yarn type:check && yarn lint",
       "pre-push": "yarn build"
     }
   },
@@ -99,6 +99,7 @@
     "textlint": "^11.7.6",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
     "ts-node": "^9.0.0",
+    "tsc": "^1.20150623.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
@@ -112,6 +113,7 @@
     "dev": "gatsby develop",
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
     "codegen": "graphql-codegen --config codegen.yml",
+    "type:check": "tsc --noEmit",
     "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && yarn run stylelint 'src/**/*.{scss,.css}' --fix",
     "build": "gatsby build",
     "try:prod": "yarn build && http-server public",
