--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
   "name": "kimuemon-tech-blog",
+  "version": "0.1.0",
   "private": true,
   "description": "My tech blog produced by gatsby",
-  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/techblog1/gatsby-blog"
+  },
+  "license": "0BSD",
   "author": "Kaito Kimura <dev.kimuson@gmail.com>",
+  "main": "n/a",
+  "scripts": {
+    "article:new": "git rev-parse --show-toplevel && ./bin/create.sh",
+    "build": "gatsby build",
+    "clean": "gatsby clean",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "dev": "gatsby develop",
+    "dev:codegen": "IS_CODEGEN=true gatsby develop",
+    "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && yarn run stylelint 'src/**/*.{scss,.css}' --fix",
+    "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin master",
+    "start": "npm run develop",
+    "try:prod": "yarn build && http-server public",
+    "type:check": "tsc --noEmit"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "yarn type:check && yarn lint",
@@ -11,37 +30,48 @@
     }
   },
   "dependencies": {
+    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@graphql-codegen/cli": "^1.19.1",
-    "@graphql-codegen/typescript": "^1.17.11",
-    "@graphql-codegen/typescript-operations": "^1.17.9",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
+    "@tsconfig/node14": "^1.0.0",
+    "@types/mdx-js__react": "^1.5.3",
     "@types/node": "^14.6.1",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-share": "^3.0.3",
+    "@types/swiper": "^5.4.0",
     "animate.css": "^4.1.1",
     "autoprefixer": "^9.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
     "dayjs": "^1.9.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fuse.js": "^6.4.1",
     "gatsby": "^2.24.51",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.4.25",
+    "gatsby-plugin-mdx": "^1.4.0",
     "gatsby-plugin-next-seo": "^1.6.1",
     "gatsby-plugin-offline": "^3.2.25",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-remove-console": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.5.2",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-sharp": "^2.6.29",
     "gatsby-plugin-sitemap": "^2.4.13",
+    "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-images": "^3.3.27",
@@ -50,39 +80,19 @@
     "gatsby-source-filesystem": "^2.3.26",
     "gatsby-transformer-sharp": "^2.5.13",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
+    "mdx-utils": "^0.2.0",
     "modern-css-reset": "^1.1.1",
     "postcss": "^7.0.34",
     "postcss-flexbugs-fixes": "^4.2.1",
+    "prettier": "^2.1.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
+    "react-live": "^2.2.3",
     "react-share": "^4.3.0",
     "sass": "^1.26.11",
-    "swiper": "^6.3.3",
-    "typescript": "^4.0.2"
-  },
-  "devDependencies": {
-    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
-    "@mdx-js/mdx": "^1.6.21",
-    "@mdx-js/react": "^1.6.21",
-    "@tsconfig/node14": "^1.0.0",
-    "@types/mdx-js__react": "^1.5.3",
-    "@types/swiper": "^5.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "gatsby-plugin-eslint": "^2.0.8",
-    "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-mdx": "^1.4.0",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-stylelint": "^3.2.0",
-    "http-server": "^0.12.3",
-    "husky": "^4.3.0",
-    "mdx-utils": "^0.2.0",
-    "prettier": "^2.1.1",
-    "react-live": "^2.2.3",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^3.0.0",
@@ -90,30 +100,20 @@
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^2.1.0",
+    "swiper": "^6.3.3",
     "textlint": "^11.7.6",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
     "ts-node": "^9.0.0",
-    "tsc": "^1.20150623.0",
     "tsconfig-paths": "^3.9.0",
-    "tsconfig-paths-webpack-plugin": "^3.3.0"
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.0.2"
   },
-  "license": "0BSD",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/techblog1/gatsby-blog"
-  },
-  "scripts": {
-    "dev": "gatsby develop",
-    "dev:codegen": "IS_CODEGEN=true gatsby develop",
-    "codegen": "graphql-codegen --config codegen.yml",
-    "type:check": "tsc --noEmit",
-    "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && yarn run stylelint 'src/**/*.{scss,.css}' --fix",
-    "build": "gatsby build",
-    "try:prod": "yarn build && http-server public",
-    "start": "npm run develop",
-    "clean": "gatsby clean",
-    "article:new": "git rev-parse --show-toplevel && ./bin/create.sh",
-    "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin master"
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.19.1",
+    "@graphql-codegen/typescript": "^1.17.11",
+    "@graphql-codegen/typescript-operations": "^1.17.9",
+    "http-server": "^0.12.3",
+    "husky": "^4.3.0",
+    "tsc": "^1.20150623.0"
   }
 }
