--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@graphql-codegen/typescript": "^1.17.11",
     "@graphql-codegen/typescript-operations": "^1.17.9",
     "gatsby-plugin-netlify": "^2.5.0",
+    "gatsby-remark-autolink-headers": "^2.6.0",
     "http-server": "^0.12.3",
     "husky": "^4.3.0",
     "tsc": "^1.20150623.0"
