--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
     "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && yarn run stylelint 'src/**/*.{scss,.css}' --fix",
     "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin master",
+    "sort:package": "npx sort-package-json",
     "start": "npm run develop",
     "try:prod": "yarn build && http-server public",
     "type:check": "tsc --noEmit"
@@ -29,12 +30,15 @@
       "pre-push": "yarn build"
     }
   },
-  "dependencies": {
+  "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@graphql-codegen/cli": "^1.19.1",
+    "@graphql-codegen/typescript": "^1.17.11",
+    "@graphql-codegen/typescript-operations": "^1.17.9",
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
     "@tsconfig/node14": "^1.0.0",
@@ -62,6 +66,7 @@
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.4.25",
     "gatsby-plugin-mdx": "^1.4.0",
+    "gatsby-plugin-netlify": "^2.5.0",
     "gatsby-plugin-next-seo": "^1.6.1",
     "gatsby-plugin-offline": "^3.2.25",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -72,6 +77,7 @@
     "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
+    "gatsby-remark-autolink-headers": "^2.6.0",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-images": "^3.3.27",
     "gatsby-remark-prismjs": "^3.5.11",
@@ -79,6 +85,8 @@
     "gatsby-source-filesystem": "^2.3.26",
     "gatsby-transformer-sharp": "^2.5.13",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
+    "http-server": "^0.12.3",
+    "husky": "^4.3.0",
     "mdx-utils": "^0.2.0",
     "modern-css-reset": "^1.1.1",
     "postcss": "^7.0.34",
@@ -103,18 +111,9 @@
     "textlint": "^11.7.6",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
     "ts-node": "^9.0.0",
+    "tsc": "^1.20150623.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.2"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^1.19.1",
-    "@graphql-codegen/typescript": "^1.17.11",
-    "@graphql-codegen/typescript-operations": "^1.17.9",
-    "gatsby-plugin-netlify": "^2.5.0",
-    "gatsby-remark-autolink-headers": "^2.6.0",
-    "http-server": "^0.12.3",
-    "husky": "^4.3.0",
-    "tsc": "^1.20150623.0"
   }
 }
