--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
     "dayjs": "^1.9.1",
+    "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby": "^2.24.51",
