[update] パフォーマンス向上のため、mdx のコンポーネントを loadable-components を使うようにしてみた #18
少し様子見

--- a/package.json
+++ b/package.json
@@ -114,5 +114,8 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "loadable-components": "^2.2.3"
   }
 }
