[update] loadable-components を import 用のもののみに変更 #18

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@mdx": [
+        "./src/components/_mdx"
+      ],
     },
     "module": "esnext",
     "moduleResolution": "node",
