[update] ロゴイメージの追加 #28

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       "@graphql-types": [
         "types/graphql-types.d.ts"
       ],
+      "@static/*": [
+        "static/*"
+      ],
       "@styles/*": [
         "src/global-styles/*"
       ],
