--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "http-server": "^0.12.3",
     "husky": "^4.3.0",
+    "loadable-components": "^2.2.3",
     "mdx-utils": "^0.2.0",
     "modern-css-reset": "^1.1.1",
     "postcss": "^7.0.34",
@@ -114,8 +115,5 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "loadable-components": "^2.2.3"
   }
 }
