--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tsconfig/node14": "^1.0.0",
     "@types/mdx-js__react": "^1.5.3",
     "@types/node": "^14.6.1",
+    "@types/ramda": "^0.27.34",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
@@ -115,5 +116,8 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "ramda": "^0.27.1"
   }
 }
