[update] VSCode のマークダウンプレビューのため設定を更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
   "files.associations": {
     "*.tsx": "typescriptreact",
     "*.jsx": "javascriptreact",
+    "*.md": "markdown, mdx",
+    "*.mdx": "markdown, mdx"
   },
   // ESLint
   "eslint.options": {
