--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sort:package": "npx sort-package-json",
     "start": "npm run develop",
     "try:prod": "yarn build && http-server public -p 80",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "now": "date +'%Y-%m-%dT%TZ'"
   },
   "husky": {
     "hooks": {
