--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "main": "n/a",
   "scripts": {
     "blog:new": "git rev-parse --show-toplevel && ./bin/create.sh",
-    "build": "gatsby build",
+    "build": "NODE_ENV=production gatsby build",
     "clean": "gatsby clean",
     "codegen": "graphql-codegen --config codegen.yml",
     "dev": "gatsby develop -p 2828",
-    "dev:codegen": "IS_CODEGEN=true gatsby develop",
+    "dev:codegen": "NODE_ENV=development IS_CODEGEN=true gatsby develop",
     "lint": "yarn run eslint src --ext .tsx,.ts,.jsx,.js --fix && yarn run stylelint 'src/**/*.{scss,.css}' --fix",
     "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin master",
     "sort:package": "npx sort-package-json",
