--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-plugin-stylelint": "^3.2.0",
     "gatsby-plugin-typescript": "^2.4.18",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-autolink-headers": "^2.6.0",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-images": "^3.3.27",
