--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin master",
     "sort:package": "sort-package-json",
     "start": "yarn build && http-server public -p 80",
+    "test": "jest",
     "typecheck": "tsc -p . --noEmit"
   },
   "husky": {
@@ -94,6 +95,7 @@
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "http-server": "^0.12.3",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "loadable-components": "^2.2.3",
     "mdx-utils": "^0.2.0",
     "modern-css-reset": "^1.1.1",
@@ -120,6 +122,7 @@
     "swiper": "^6.3.3",
     "textlint": "^11.7.6",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
     "tsconfig-paths": "^3.9.0",
