[add] ビルド時に Qiita & Zenn から記事一覧を取得 #38

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "main": "n/a",
   "scripts": {
     "blog:new": "git rev-parse --show-toplevel && ./bin/create.sh",
-    "build": "gatsby build",
+    "build": "run-s build:feed build:gatsby",
+    "build:feed": "ts-node --project ./bin/tsconfig.json -r tsconfig-paths/register ./bin/fetch-feed.ts",
+    "build:gatsby": "gatsby build",
     "clean": "gatsby clean",
     "codegen": "graphql-codegen --config codegen.yml",
-    "dev": "gatsby develop -p 2828",
+    "dev": "run-s build:feed dev:gatsby",
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
+    "dev:gatsby": "gatsby develop -p 2828",
     "fix": "run-p fix:*",
     "fix:eslint": "eslint src --ext .tsx,.ts,.jsx,.js --fix",
     "fix:prettier": "prettier '**/*.json' --write",
@@ -110,6 +113,7 @@
     "react-helmet-async": "^1.0.7",
     "react-live": "^2.2.3",
     "react-share": "^4.3.0",
+    "rss-parser": "^3.10.0",
     "sass": "^1.26.11",
     "sort-package-json": "^1.48.1",
     "stylelint": "^13.6.1",
