--- a/package.json
+++ b/package.json
@@ -20,117 +20,116 @@
     "dev": "run-s build:feed dev:gatsby",
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
     "dev:gatsby": "gatsby develop -p 2828",
+    "typecheck": "tsc -p . --noEmit",
+    "lint": "yarn typecheck && run-p lint:*",
+    "lint:eslint": "eslint src --ext .tsx,.ts,.jsx",
+    "lint:prettier": "prettier './**/*.{tsx,ts,jsx,json}' --check",
+    "lint:stylelint": "stylelint 'src/**/*.{scss,.css}'",
     "fix": "run-p fix:*",
-    "fix:eslint": "eslint src --ext .tsx,.ts,.jsx,.js --fix",
-    "fix:prettier": "prettier '**/*.json' --write",
-    "fix:stylelint": "stylelint 'src/**/*.{scss,.css}' --fix",
+    "fix:eslint": "yarn lint:eslint --fix",
+    "fix:prettier": "prettier './**/*.{tsx,ts,jsx,json}' --write",
+    "fix:stylelint": "yarn lint:stylelint --fix",
     "now": "date +'%Y-%m-%dT%TZ'",
     "post": "git rev-parse --show-toplevel && git add content && git commit -m '[auto] post article' && git push origin master",
-    "sort:package": "sort-package-json",
     "start": "yarn build && http-server public -p 80",
-    "test": "jest",
-    "typecheck": "tsc -p . --noEmit"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run run-p typecheck fix sort:package",
-      "pre-push": "yarn build"
+      "pre-push": "yarn lint"
     }
   },
   "dependencies": {
     "ramda": "^0.27.1"
   },
   "devDependencies": {
-    "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@graphql-codegen/cli": "^1.19.1",
-    "@graphql-codegen/typescript": "^1.17.11",
-    "@graphql-codegen/typescript-operations": "^1.17.9",
-    "@mdx-js/mdx": "^1.6.21",
-    "@mdx-js/react": "^1.6.21",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@graphql-codegen/cli": "^1.21.1",
+    "@graphql-codegen/typescript": "^1.21.0",
+    "@graphql-codegen/typescript-operations": "^1.17.14",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@tsconfig/node14": "^1.0.0",
     "@types/mdx-js__react": "^1.5.3",
-    "@types/node": "^14.6.1",
-    "@types/ramda": "^0.27.34",
-    "@types/react": "^16.9.48",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.14.31",
+    "@types/ramda": "^0.27.38",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/react-helmet": "^6.1.0",
     "@types/react-share": "^3.0.3",
-    "@types/swiper": "^5.4.0",
+    "@types/swiper": "^5.4.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^9.8.4",
+    "autoprefixer": "^9",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "cssnano": "^4.1.10",
-    "dayjs": "^1.9.1",
+    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "gatsby": "^2.24.51",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-eslint": "^2.0.8",
-    "gatsby-plugin-feed-mdx": "^1.0.1",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-react": "^7.22.0",
+    "gatsby": "^2.32.8",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-manifest": "^2.4.25",
-    "gatsby-plugin-mdx": "^1.4.0",
-    "gatsby-plugin-netlify": "^2.5.0",
-    "gatsby-plugin-next-seo": "^1.6.1",
-    "gatsby-plugin-offline": "^3.2.25",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-mdx": "^1.10.1",
+    "gatsby-plugin-netlify": "^2.11.0",
+    "gatsby-plugin-next-seo": "^1.7.0",
+    "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-remove-console": "^0.0.2",
-    "gatsby-plugin-robots-txt": "^1.5.2",
-    "gatsby-plugin-sass": "^2.3.13",
-    "gatsby-plugin-sharp": "^2.6.29",
-    "gatsby-plugin-sitemap": "^2.4.13",
-    "gatsby-plugin-stylelint": "^3.2.0",
-    "gatsby-plugin-typescript": "^2.4.18",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-typescript": "^2.12.1",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.6.0",
-    "gatsby-remark-copy-linked-files": "^2.3.12",
-    "gatsby-remark-images": "^3.3.27",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.26",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-remark-autolink-headers": "^2.11.0",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-remark-smartypants": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.12.0",
     "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "http-server": "^0.12.3",
-    "husky": "^4.3.0",
+    "husky": "^5.1.1",
     "jest": "^26.6.3",
     "loadable-components": "^2.2.3",
     "mdx-utils": "^0.2.0",
-    "modern-css-reset": "^1.1.1",
+    "modern-css-reset": "^1.4.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.34",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "prettier": "^2.1.1",
-    "prismjs": "^1.21.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "postcss": "^7",
+    "postcss-flexbugs-fixes": "^4",
+    "prettier": "^2.2.1",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
     "react-live": "^2.2.3",
-    "react-share": "^4.3.0",
-    "rss-parser": "^3.10.0",
-    "sass": "^1.26.11",
-    "sort-package-json": "^1.48.1",
-    "stylelint": "^13.6.1",
+    "react-share": "^4.3.1",
+    "rss-parser": "^3.12.0",
+    "sass": "^1.32.8",
+    "stylelint": "^13.11.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard-scss": "^1.1.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.18.0",
-    "stylelint-webpack-plugin": "^2.1.0",
-    "swiper": "^6.3.3",
-    "textlint": "^11.7.6",
-    "textlint-rule-preset-ja-technical-writing": "^4.0.1",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
+    "stylelint-scss": "^3.19.0",
+    "subscriptions-transport-ws": "^0.9.18",
+    "swiper": "^6.4.15",
+    "ts-jest": "^26.5.2",
+    "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.2.2",
+    "websocket": "^1.0.33"
   }
 }
