[update] fix import statements (remove ts-ignore for css modules & fix alias)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "paths": {
       "~/*": ["src/*"],
       "types": ["types"],
-      "@graphql-types": ["./types/graphql-types.d.ts"],
+      "@graphql-types": ["types/graphql-types.d.ts"],
+      "@mdx": ["src/components/_mdx.ts"],
       "@static/*": ["static/*"]
     },
     "esModuleInterop": true,
