[update] change to use gatsby-plugin-image

--- a/package.json
+++ b/package.json
@@ -77,11 +77,11 @@
     "eslint-plugin-react": "^7.22.0",
     "fibers": "^5.0.0",
     "gatsby": "^3.0.2",
-    "gatsby-image": "^3.0.0",
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-mdx": "^2.0.0",
     "gatsby-plugin-netlify": "^3.0.0",
