[update] added mdx to prettier target

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,14 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true
   },
+  "[mdx]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[markdown]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   // Invalidate other formatters
   "css.validate": false,
   "scss.validate": false
