--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "typecheck": "tsc -p . --noEmit",
     "lint": "yarn typecheck && run-p lint:*",
     "lint:eslint": "eslint src --ext .tsx,.ts,.jsx",
-    "lint:prettier": "prettier './**/*.{tsx,ts,jsx,json}' --check",
+    "lint:prettier": "prettier './**/*.{tsx,ts,jsx,json,md,mdx}' --check",
     "lint:stylelint": "stylelint 'src/**/*.{scss,.css}'",
     "fix": "run-p fix:*",
     "fix:eslint": "yarn lint:eslint --fix",
-    "fix:prettier": "prettier './**/*.{tsx,ts,jsx,json}' --write",
+    "fix:prettier": "prettier './**/*.{tsx,ts,jsx,json,md,mdx}' --write",
     "fix:stylelint": "yarn lint:stylelint --fix",
     "now": "date +'%Y-%m-%dT%TZ'",
     "post": "git rev-parse --show-toplevel && git add content && git commit -m '[article] post article' && git push origin master",
