chore(package.json): added script which create work post from template

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "author": "Kaito Kimura <dev.kimuson@gmail.com>",
   "main": "n/a",
   "scripts": {
-    "blog:new": "git rev-parse --show-toplevel && ./bin/create.sh",
+    "dev": "run-s build:feed dev:gatsby",
+    "dev:codegen": "IS_CODEGEN=true gatsby develop",
+    "dev:gatsby": "gatsby develop -p 2828",
+    "start": "yarn build && http-server public -p 80",
     "build": "run-s build:feed build:gatsby",
     "build:feed": "ts-node --project ./bin/tsconfig.json -r tsconfig-paths/register ./bin/fetch-feed.ts",
     "build:gatsby": "gatsby build",
     "clean": "gatsby clean",
     "codegen": "graphql-codegen --config codegen.yml",
-    "dev": "run-s build:feed dev:gatsby",
-    "dev:codegen": "IS_CODEGEN=true gatsby develop",
-    "dev:gatsby": "gatsby develop -p 2828",
     "typecheck": "tsc -p . --noEmit",
     "lint": "yarn typecheck && run-p lint:*",
     "lint:eslint": "eslint src --ext .tsx,.ts,.jsx",
@@ -30,8 +30,9 @@
     "fix:prettier": "prettier './**/*.{tsx,ts,jsx,json,md,mdx}' --write",
     "fix:stylelint": "yarn lint:stylelint --fix",
     "now": "date +'%Y-%m-%dT%TZ'",
-    "post": "git rev-parse --show-toplevel && git add content && git commit -m '[article] post article' && git push origin master",
-    "start": "yarn build && http-server public -p 80",
+    "blog:new": "git rev-parse --show-toplevel && ./bin/create.sh article",
+    "work:new": "git rev-parse --show-toplevel && ./bin/create.sh work",
+    "deploy": "git rev-parse --show-toplevel && git add content && git commit -m '[article] post article' && git push origin master",
     "test": "jest"
   },
   "husky": {
