perf: apply brotli zipping for production build

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "run-s build:feed dev:gatsby",
     "dev:codegen": "IS_CODEGEN=true gatsby develop",
     "dev:gatsby": "gatsby develop -p 2828",
-    "start": "yarn build && http-server public -p 80",
+    "start": "yarn build && http-server public -p 80 --brotli",
     "build": "run-s build:feed build:gatsby",
     "build:feed": "ts-node --project ./bin/tsconfig.json -r tsconfig-paths/register ./bin/fetch-feed.ts",
     "build:gatsby": "gatsby build",
@@ -78,6 +78,7 @@
     "eslint-plugin-react": "^7.22.0",
     "fibers": "^5.0.0",
     "gatsby": "^3.0.2",
+    "gatsby-plugin-brotli": "^2.0.0",
     "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
