--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-feed": "^4.21.0",
     "preact": "^10.6.5",
     "preact-render-to-string": "^5.1.19",
+    "prism-react-renderer": "^1.3.5",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
@@ -55,7 +56,7 @@
     "@graphql-codegen/typescript-operations": "^2.2.4",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@tsconfig/node14": "^1.0.1",
+    "@tsconfig/node18-strictest": "^1.0.0",
     "@types/jest": "^27.4.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/mini-css-extract-plugin": "^2.5.1",
@@ -66,8 +67,8 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-share": "^4.0.0",
     "@types/swiper": "^5.4.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -76,9 +77,11 @@
     "dotenv": "^10.0.0",
     "esbuild": "^0.14.22",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.4.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
     "gatsby": "^4.21.1",
     "gatsby-plugin-fontawesome-css": "^1.1.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
@@ -114,7 +117,7 @@
     "postcss": "^8.4.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.5.1",
-    "prismjs": "^1.26.0",
+    "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -132,10 +135,10 @@
     "subscriptions-transport-ws": "^0.11.0",
     "swiper": "^6.5.1",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.12.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.5.5",
+    "typescript": "^4.7.4",
     "websocket": "^1.0.34"
   }
 }
