--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "gatsby-plugin-sharp": "^4.21.0",
     "gatsby-plugin-sitemap": "^5.21.0",
     "gatsby-plugin-typescript": "^4.21.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
     "gatsby-remark-autolink-headers": "^4.11.0",
     "gatsby-remark-copy-linked-files": "^4.11.0",
     "gatsby-remark-images": "^6.21.0",
