fix(*): fix build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
     "./gatsby-node.ts",
     "./gatsby-config.ts",
     "./gatsby-browser.ts",
+    "./gatsby-ssr.ts",
     "./src/**/*",
     "./bin/**/*",
     "./gatsby/**/*"
