feat(*): linter セットアップした

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
   },
   // Invalidate other formatters
   "css.validate": false,
-  "scss.validate": false
+  "scss.validate": false,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
