feat(*): 画像表示対応

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,13 @@
     "paths": {
       "~/*": ["src/*"]
     },
-    "exactOptionalPropertyTypes": false
+    "exactOptionalPropertyTypes": false,
+    "verbatimModuleSyntax": true,
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
+      }
+    ]
   },
   "include": ["src"],
   "exclude": ["test/**", "**/*.test.ts"]
