--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:eslint": "eslint src --cache --ext .ts,.tsx",
     "lint:prettier": "prettier '**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --check",
     "lint:cspell": "cspell lint './**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --gitignore --cache",
+    "lint:astro": "astro check",
     "lint": "pnpm /^lint:.*/",
     "fix:eslint": "pnpm lint:eslint --fix",
     "fix:prettier": "prettier '**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --write",
@@ -52,9 +53,12 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.2.0",
+    "@astrojs/mdx": "^1.1.0",
     "@astrojs/preact": "^3.0.0",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/ts-plugin": "^1.1.3",
     "@types/jsdom": "^21.1.3",
     "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
