--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "typecheck": "tsc --noEmit",
+    "watch:typecheck": "pnpm /^watch:typecheck:.*/",
+    "watch:typecheck:tsc": "pnpm typecheck:tsc --watch",
+    "watch:typecheck:astro": "pnpm typecheck:astro --watch",
+    "typecheck": "pnpm /^typecheck:.*/",
+    "typecheck:tsc": "tsc --noEmit",
+    "typecheck:astro": "astro check",
     "lint:eslint": "eslint src --cache --ext .ts,.tsx",
     "lint:prettier": "prettier '**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --check",
     "lint:cspell": "cspell lint './**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --gitignore --cache",
-    "lint:astro": "astro check",
     "lint": "pnpm /^lint:.*/",
     "fix:eslint": "pnpm lint:eslint --fix",
     "fix:prettier": "prettier '**/*.{tsx,ts,mjs,cjs,js,json,css,scss,yml,yaml,md}' --write",
