chore(*): husky+lint-staged -> lefthook

--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.3.0",
+    "lefthook": "^1.5.0",
     "parser@latest": "link:typescript-eslint/parser@latest",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
